Fix routine edit page broken layout on mobile

--- a/src/screens/settings/automation/edit-routine.scss
+++ b/src/screens/settings/automation/edit-routine.scss
@@ -56,6 +56,8 @@ main#automation .edit-routine {
                 margin: 0;
                 padding: 10px;
                 flex-grow: 1;
+                overflow: unset !important;
+                margin: 0 !important;
 
                 > :not(:last-child) {
                     margin-bottom: 10px;
